--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,7 +49,7 @@
             android:layout_alignParentBottom="true"
             android:background="@color/white"
             app:itemIconTint="@color/nav_item_selector_color"
-            app:itemTextColor="@color/nav_item_selector_color"
+            app:itemTextColor="#a3a3a3"
             app:menu="@menu/menu_bottom_navigation" />
 
 
