--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,7 +57,6 @@
     <style name="scan_image">
         <item name="android:layout_width">@dimen/margin_150</item>
         <item name="android:layout_height">@dimen/margin_150</item>
-        <item name="android:layout_below">@+id/text_scanuid</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_marginTop">70dp</item>
@@ -70,7 +69,6 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:layout_alignStart">@+id/text_scanuid</item>
         <item name="android:layout_marginTop">55dp</item>
         <item name="android:textColor">#4f535d</item>
         <item name="android:text">@string/action_entermobilenumber</item>
@@ -85,18 +83,19 @@
 
 
 
+
+
     <style name="qrcode_warrenty" parent="BothWrap">
 
     </style>
 
-
     <style name="cardview_warrenty" parent="BothMatch">
-        <item name="cardBackgroundColor">@color/white</item>
-        <item name="cardCornerRadius">@dimen/margin_3</item>
-        <item name="cardElevation">@dimen/margin_3</item>
-        <item name="cardPreventCornerOverlap">false</item>
-        <item name="cardUseCompatPadding">true</item>
-        <item name="contentPadding">@dimen/margin_10</item>
+        <item name="cardCornerRadius">@dimen/margin_10</item>
+        <item name="cardElevation">@dimen/margin_25</item>
+        <item name="android:layout_marginLeft">@dimen/margin_50</item>
+        <item name="android:layout_marginRight">@dimen/margin_45</item>
+        <item name="android:layout_marginBottom">@dimen/margin_190</item>
+        <item name="android:layout_marginTop">@dimen/margin_180</item>
     </style>
 
     <!--text_field-->
