Location Based Address Implementation

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -170,6 +170,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+    <style name="Match200">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">200dp</item>
+    </style>
     <style name="View_Match">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
