--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -2,9 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-    </data>
-
     <RelativeLayout
         style="@style/BothMatch"
         android:background="@android:color/white">
@@ -32,13 +29,13 @@
                 />
 
             <TextView
-                android:id="@+id/text_enter_emailid"
+                android:id="@+id/text_enter_phone_number"
                 style="@style/MatchWrap"
                 android:layout_below="@id/text_forgot_password"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/margin_10"
                 android:gravity="center"
-                android:text="@string/login_forgotpassword_enter_emailid"
+                android:text="@string/login_forgotpassword_enter_phone_number"
                 android:textColor="@color/colorForgotPasswordText"
                 android:textSize="11.5sp"
                 />
@@ -46,18 +43,18 @@
             <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_username"
                 style="@style/MatchWrap"
-                android:layout_below="@id/text_enter_emailid"
+                android:layout_below="@id/text_enter_phone_number"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="45dp"
-                android:hint="@string/forgot_password_emailid_hint"
+                android:hint="@string/forgot_password_phone_number_hint"
                 android:textColorHint="@color/colorForgotPasswordHintText"
                 app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/edittext_username"
                     style="@style/MatchWrap"
-                    android:inputType="textEmailAddress"
+                    android:inputType="number"
                     android:maxLines="1"
                     android:textColor="@color/colorForgotPasswordHintText"
                     android:textSize="14sp"/>
