Added store address api

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -59,6 +59,15 @@
         <item>@string/tab_return</item>
     </string-array>
 
+    <!-- Category dropdown options -->
+    <string-array
+        name="category_options_list">
+        <item>Kitchen</item>
+        <item>Electronics</item>
+        <item>Fashion</item>
+        <item>Books</item>
+    </string-array>
+
     <!-- Gender dropdown options -->
     <string-array
         name="gender_options_list">
