--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,7 +90,8 @@
                         android:textColorHint="@color/colorForgotPasswordHintText"
                         app:errorEnabled="true"
                         app:fontName="fonts/OpenSans-Regular.ttf"
-                        app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+                        app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor"
+                        app:passwordToggleEnabled="true">
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/edittext_password"
