--- a/app/src/main/res/layout/fragment_registration_user.xml
+++ b/app/src/main/res/layout/fragment_registration_user.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="register"
-            type="com.incon.connect.dto.registration.Register"/>
+            type="com.incon.connect.dto.registration.Registration"/>
 
         <variable
             name="userFragment"
@@ -81,7 +81,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="0"
-                        android:text="@={register.userInfo.name}"/>
+                        android:text="@={register.name}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- Phone -->
@@ -103,7 +103,7 @@
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
                         android:tag="1"
-                        android:text="@={register.userInfo.phoneNumber}"/>
+                        android:text="@={register.phoneNumber}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- Gender -->
@@ -115,7 +115,7 @@
                     android:focusable="true"
                     android:hint="@string/register_gender_hint"
                     android:tag="2"
-                    android:text="@={register.userInfo.genderType}"
+                    android:text="@={register.genderType}"
                     app:errorEnabled="true"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
@@ -136,7 +136,7 @@
                         style="@style/Register_TextInputEditText"
                         android:enabled="false"
                         android:tag="3"
-                        android:text="@={register.userInfo.dateOfBirthToShow}"/>
+                        android:text="@={register.dateOfBirthToShow}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
 
@@ -170,7 +170,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="4"
-                        android:text="@={register.userInfo.emailId}"/>
+                        android:text="@={register.emailId}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- Password -->
@@ -193,7 +193,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="5"
-                        android:text="@={register.userInfo.password}"/>
+                        android:text="@={register.password}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- confirm Password -->
@@ -216,8 +216,40 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="6"
-                        android:text="@={register.userInfo.confirmPassword}"/>
+                        android:text="@={register.confirmPassword}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
+
+
+                <!-- Address -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_register_address"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/input_layout_register_confirm_password"
+                    android:hint="@string/register_address_hint"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_register_address"
+                        style="@style/Register_TextInputEditText"
+                        android:enabled="false"
+                        android:tag="7"
+                        android:text="@={register.userAddress}"/>
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+
+                <!--Dummy view used for click action-->
+                <View
+                    android:id="@+id/view_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_alignBottom="@+id/input_layout_register_address"
+                    android:layout_alignEnd="@+id/input_layout_register_address"
+                    android:layout_alignStart="@+id/input_layout_register_address"
+                    android:layout_alignTop="@+id/input_layout_register_address"
+                    android:background="@null"
+                    android:onClick="@{() -> userFragment.onAddressClick()}"/>
 
             </RelativeLayout>
 
