notification screen, return fragment , interst fragment and back arrow

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,8 @@
             <FrameLayout
                 android:id="@+id/container_toolbar"
                 style="@style/MatchWrap"
-                android:layout_height="?attr/actionBarSize">
+                android:layout_height="?attr/actionBarSize"
+                >
             </FrameLayout>
             <!-- Content Container -->
             <FrameLayout
