--- a/app/src/main/res/drawable/ic_back_arrow.xml
+++ b/app/src/main/res/drawable/ic_back_arrow.xml
@@ -1,13 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="8dp"
-        android:height="14dp"
-        android:viewportWidth="8.0"
-        android:viewportHeight="14.0">
-    <path
-        android:pathData="M6.818,1L1,6.818l5.818,5.702"
-        android:strokeLineCap="round"
-        android:strokeColor="#FFF"
-        android:fillColor="#00000000"
-        android:strokeWidth="1.92"
-        android:strokeLineJoin="round"/>
+<vector android:height="24dp" android:viewportHeight="64.0"
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M22.76,15.66L8.87,30.2c-0.83,0.8 -1.25,1.9 -1.25,3.1c0,1.21 0.42,2.29 1.25,3.1l13.89,14.6c1.65,1.73 4.34,1.73 5.99,0c1.65,-1.73 1.65,-4.53 0,-6.26l-6.66,-6.98h30.06c2.34,0 4.24,-1.98 4.24,-4.43c0,-2.45 -1.9,-4.43 -4.24,-4.43h-30.06l6.68,-6.98c1.65,-1.73 1.65,-4.53 0,-6.26C27.1,13.93 24.42,13.93 22.76,15.66z"/>
 </vector>
