--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,8 +26,7 @@
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
                     android:visibility="visible"
-                    app:srcCompat="@drawable/ic_back_arrow"
-                    />
+                    app:srcCompat="@drawable/ic_back_arrow"/>
                 <TextView
                     android:id="@+id/title"
                     style="@style/BothWrap"
