1. Implemented OTP dialog 2. Completed registration 3.

--- a/app/src/main/res/layout/activity_reset_password_prompt.xml
+++ b/app/src/main/res/layout/activity_reset_password_prompt.xml
@@ -51,6 +51,7 @@
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="12.9sp"
+            android:visibility="gone"
             />
 
     </RelativeLayout>
