--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,14 +44,19 @@
             android:layout_marginTop="@dimen/margin_20"
             app:srcCompat="@drawable/ic_connect_logo_svg"/>
 
-        <android.support.v7.widget.CardView
-            style="@style/style_card_view"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/logo_image_view"
-            android:layout_margin="@dimen/margin_20">
+            android:layout_margin="@dimen/margin_20"
+            android:fadeScrollbars="false"
+            android:scrollbarSize="4dp"
+            android:scrollbarThumbVertical="@drawable/scrollbar"
+            android:scrollbars="vertical">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <android.support.v7.widget.CardView
+                style="@style/style_card_view">
+
 
                 <RelativeLayout
                     android:id="@+id/relative_login_content"
@@ -156,8 +161,8 @@
                         android:textColor="@color/tueo_theme"
                         android:textSize="@dimen/text_size_13"/>
                 </RelativeLayout>
-            </ScrollView>
-        </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>
+        </ScrollView>
     </RelativeLayout>
 
 </layout>
