--- a/app/src/main/res/layout/fragment_history_tab.xml
+++ b/app/src/main/res/layout/fragment_history_tab.xml
@@ -1,33 +1,50 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        style="@style/BothMatch"
-        android:background="@color/wild_sand">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/main_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill"
-            android:background="@color/colorPrimary"
-            android:fillViewport="true"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/AppTheme"
-            app:tabIndicatorColor="@color/denim"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@color/white"/>
+            android:layout_height="match_parent">
 
-        <com.incon.connect.custom.view.CustomViewPager
-            android:id="@+id/view_pager"
-            style="@style/BothMatch"
-            android:layout_below="@id/tab_layout"
-            app:swipeable="false"
-            app:tabGravity="fill"
-            app:tabMode="fixed">
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        </com.incon.connect.custom.view.CustomViewPager>
+                <android.support.design.widget.CollapsingToolbarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-    </RelativeLayout>
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/tab_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="fill"
+                        android:background="@color/colorPrimary"
+                        android:fillViewport="true"
+                        android:minHeight="?attr/actionBarSize"
+                        android:theme="@style/AppTheme"
+                        app:tabIndicatorColor="@color/denim"
+                        app:tabMode="fixed"
+                        app:layout_collapseMode="parallax"
+                        app:tabSelectedTextColor="@color/white"
+                        app:tabTextColor="@color/white"/>
+                </android.support.design.widget.CollapsingToolbarLayout>
+            </android.support.design.widget.AppBarLayout>
+
+            <com.incon.connect.custom.view.CustomViewPager
+                android:id="@+id/view_pager"
+                style="@style/BothMatch"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:swipeable="false"
+                app:tabGravity="fill"
+                app:tabMode="fixed">
+
+            </com.incon.connect.custom.view.CustomViewPager>
+        </android.support.design.widget.CoordinatorLayout>
 </layout>
