--- a/app/src/main/res/layout/fragment_history_tab.xml
+++ b/app/src/main/res/layout/fragment_history_tab.xml
@@ -3,27 +3,23 @@
 
         <android.support.design.widget.CoordinatorLayout
             android:id="@+id/main_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            style="@style/MatchWrap">
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/MatchWrap"
                 android:fitsSystemWindows="true"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
                 <android.support.design.widget.CollapsingToolbarLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/MatchWrap"
                     android:fitsSystemWindows="true"
                     app:contentScrim="?attr/colorPrimary"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
                     <android.support.design.widget.TabLayout
                         android:id="@+id/tab_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        style="@style/MatchWrap"
                         android:layout_gravity="fill"
                         android:background="@color/colorPrimary"
                         android:fillViewport="true"
