1. Removed unused classes in api model package 2. Changed Registration parameters 3. Implemented defaults api

--- a/app/src/main/res/layout/fragment_registration_store.xml
+++ b/app/src/main/res/layout/fragment_registration_store.xml
@@ -121,7 +121,7 @@
                         style="@style/Register_TextInputEditText"
                         android:enabled="false"
                         android:tag="2"
-                        android:text="@={register.storeCategory}"/>
+                        android:text="@={register.storeCategoryNames}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!--Dummy view used for category click action-->
